・登録機能修正 ・検索機能修正 ・更新/削除機能追加

--- a/src/app_usweb/static/app/css/common/style.css
+++ b/src/app_usweb/static/app/css/common/style.css
@@ -44,7 +44,7 @@ button:hover {
 	padding: 0 0 76px;
 	width: 190px;
 	z-index: 10;
-	
+
 
 }
 .font-size-master {
@@ -64,7 +64,7 @@ button:hover {
 	-webkit-transition: margin 0.3s ease;
 	-o-transition: margin 0.3s ease;
 	transition: margin 0.3s ease;
-	
+
 }
 
 .sen-main-contents {
@@ -73,7 +73,7 @@ button:hover {
 	padding: 60px 30px 20px 80px;
 	margin-bottom: 20px;
 	border-radius: 10px;
-	
+
 }
 
 /* # ---------
@@ -109,7 +109,7 @@ button:hover {
 	.sen-cd  {
 		text-align:center;
 	}
-	
+
 	/*数値項目に使用*/
 	.sen-numeric  {
 		text-align:right;
@@ -200,12 +200,12 @@ button:hover {
 		border: 1px solid #ccc;
 		border-bottom: 8px solid #537791;
 		font-family: 'Noto Sans JP', sans-serif !important;
-		margin:  5px 0  40px 25px;	
+		margin:  5px 0  40px 25px;
 		padding: 5px 10px 3px 10px;
 		font-size: 1.2rem !important;
 		width: 90%;
-		text-align:center;	
-	}	
+		text-align:center;
+	}
 
 	/*ボタン左寄せしたいときに使用*/
 	.sen-btn-left{
@@ -217,16 +217,16 @@ button:hover {
 	/*ボタン右寄せしたいときに使用*/
 	.sen-btn-right{
 		width:100%;
-
-		margin-bottom: 20px;
+		margin:0 5% 0 auto;
+		text-align: right;
 	}
 	/*検索画面一覧（文字のフォント変更)*/
 	.search-name{
 		font-size:13pt;
 		font-family:'Script';
 		font-weight: bold;
-	
-	} 	
+
+	}
 	/*テーブルのヘッダー色*/
 	.th-color{
 		background-color: lightskyblue;
@@ -238,7 +238,7 @@ button:hover {
     color: #2c2c2f;
     background: #cde4ff;
     border-top: solid 5px #5989cf;
-	border-bottom: solid 5px #5989cf; 
+	border-bottom: solid 5px #5989cf;
 	}
 	/*テーブルのスクロール設定*/
 	table.table-search{
@@ -260,7 +260,7 @@ button:hover {
 
 	}
 
-	
+
 
 	/*検索条件入力フォームの間隔,右*/
 	.sen-group-right-upper {
@@ -293,14 +293,14 @@ button:hover {
 	position:relative;right : 0%;
 
 	}
-	
+
 	/*メッセージデザイン*/
 span.message {
     font-size: 20px;
-    font-weight: bold;    
+    font-weight: bold;
     margin: 0;
     width: 95%;
-    text-align: center; 
+    text-align: center;
     display: block;
 }
 
