--- a/src/app_usweb/templates/common/menu.html
+++ b/src/app_usweb/templates/common/menu.html
@@ -47,7 +47,7 @@
         </div>
         <div>
           <i class="fas fa-search mr-2"></i
-          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+          ><a href="{% url 'app_usweb:employee_info_refer' %}"
             >社員マスタ検索</a
           >
         </div>
