#2 社員マスタ登録画面のCSSの修正対応

--- a/src/app_usweb/templates/master/EMD0101.html
+++ b/src/app_usweb/templates/master/EMD0101.html
@@ -50,7 +50,7 @@ sen-mx {
 
 <!--メインコンテンツ -->
 {% block contents %}
-<div class="sen-main-contents" style="min-height:800px">
+<div class="sen-main-contents">
 	<p class="title">
 		{% if form.employee_cd.value is None %}
 			<b>社員マスタ登録</b>
