#5 入社年月について修正（スラッシュではなく年、月を付与）

--- a/src/app_usweb/templates/master/EMD0100.html
+++ b/src/app_usweb/templates/master/EMD0100.html
@@ -163,7 +163,7 @@ sen-mx {
 		$("#hireDate").datepicker({
 			language : 'ja',
 			startView : 1,
-			format : 'yyyymm',
+			format : 'yyyy年mm月',
 			autoclose : true,
 			immediateUpdates : true,
 			minViewMode : 1,
