--- a/src/app_usweb/templates/master/EMD0101.html
+++ b/src/app_usweb/templates/master/EMD0101.html
@@ -122,7 +122,8 @@ input:read-only {
 		<div class="sen-required-position">
 			<div class="sen-group-left-exist">
 				<label class="sen-title-position sen-cd">入社年月</label>
-				{{ form.hire_date_ym }}
+				{{ form.hire_date_ym_disp }}
+				{{ form.hire_date_ym.as_hidden }}
 			</div>
 		</div>
 
@@ -173,15 +174,25 @@ input:read-only {
 {% block load_js %}
 <script>
 	$(function() {
-		$("#id_hire_date_ym").datepicker({
+		$("#id_hire_date_ym_disp").datepicker({
 			language : 'ja',
 			startView : 1,
-			format : 'yyyymm',
+			format : 'yyyy年mm月',
 			autoclose : true,
 			immediateUpdates : true,
 			minViewMode : 1,
 			orientation : 'bottom',
 		});
 	});
+
+	// 日付表示用フォーマット(数値6桁→YYYY年MM月)
+	$(window).on('load', function() {
+		$("#id_hire_date_ym_disp").val($("#id_hire_date_ym").val().substr(0,4)+"年"+$("#id_hire_date_ym").val().substr(4,6)+"月");
+	});
+
+	// 日付form送信用フォーマット(YYYY年MM月→数値6桁)
+	$('#btn-update').on('click', function() {
+		$("#id_hire_date_ym").val($("#id_hire_date_ym_disp").val().replace(/[^0-9]/g, ''));
+		});
 </script>
  {% endblock %}
