css、js別ファイル化など細かな修正

--- a/src/app_usweb/templates/common/menu.html
+++ b/src/app_usweb/templates/common/menu.html
@@ -17,7 +17,7 @@
       <div class="card-body">
         <div>
           <i class="fas fa-save mr-2"></i
-          ><a {# href="{% url 'app_usweb:employee_info_regist' %}" #}>社員情報検索</a>
+          ><a {# href="{% url 'app_usweb:employee_mst_regist' %}" #}>社員情報検索</a>
         </div>
       </div>
     </div>
@@ -41,13 +41,13 @@
       <div class="card-body">
         <div>
           <i class="fas fa-save mr-2"></i
-          ><a href="{% url 'app_usweb:employee_info_regist' %}"
+          ><a href="{% url 'app_usweb:employee_mst_regist' %}"
             >社員マスタ登録</a
           >
         </div>
         <div>
           <i class="fas fa-search mr-2"></i
-          ><a href="{% url 'app_usweb:employee_info_refer' %}"
+          ><a href="{% url 'app_usweb:employee_mst_refer' %}"
             >社員マスタ検索</a
           >
         </div>
@@ -73,13 +73,13 @@
       <div class="card-body">
         <div>
           <i class="fas fa-save mr-2"></i
-          ><a {# href="{% url 'app_usweb:employee_info_regist' %}" #}
+          ><a {# href="{% url 'app_usweb:employee_mst_regist' %}" #}
             >モニタマスタ登録</a
           >
         </div>
         <div>
           <i class="fas fa-search mr-2"></i
-          ><a {# href="{% url 'app_usweb:employee_info_regist' %}" #}
+          ><a {# href="{% url 'app_usweb:employee_mst_regist' %}" #}
             >モニタマスタ検索</a
           >
         </div>
@@ -103,11 +103,11 @@
       <div class="card-body">
         <div>
           <i class="fas fa-save mr-2"></i
-          ><a {# href="{ url 'app_usweb:employee_info_regist' }" #}>PCマスタ登録</a>
+          ><a {# href="{ url 'app_usweb:employee_mst_regist' }" #}>PCマスタ登録</a>
         </div>
         <div>
           <i class="fas fa-search mr-2"></i
-          ><a {# href="{% url 'app_usweb:employee_info_regist' %}" #}>PCマスタ検索</a>
+          ><a {# href="{% url 'app_usweb:employee_mst_regist' %}" #}>PCマスタ検索</a>
         </div>
       </div>
     </div>
